--- a/pa2/GNUmakefile
+++ b/pa2/GNUmakefile
@@ -1,4 +1,4 @@
-PROGRAMS = matrixmultiply
+PROGRAMS = strassen
 all: $(PROGRAMS)
 
 include ../common/rules.mk
@@ -6,7 +6,7 @@ include ../common/rules.mk
 %.o: %.c $(BUILDSTAMP)
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(DEPCFLAGS) $(O) -o $@ -c $<
 
-matrixmultiply: matrixmultiply.o
+strassen: strassen.o
 	$(CC) $(CFLAGS) $(O) -o $@ $^ -lm
 
 clean:
