--- a/pa2/GNUmakefile
+++ b/pa2/GNUmakefile
@@ -1,7 +1,7 @@
 PROGRAMS = strassen
 all: $(PROGRAMS)
 
-include ../common/rules.mk
+include rules.mk
 
 %.o: %.c $(BUILDSTAMP)
 	$(CC) $(CPPFLAGS) $(CFLAGS) $(DEPCFLAGS) $(O) -o $@ -c $<
